move most of Normalization code to Matrix and adjust accordingly